--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,4 +1,9 @@
-image: Ubuntu1804  # образ для сборки
+version: 1.0.{build}
+image: Visual Studio 2019
+environment:
+  GITHUB_TOKEN: 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
+build:
+  verbosity: minimal
 stack: node 17  # окружение
 branches:
   only:
@@ -6,6 +11,5 @@ branches:
 cache: node_modules  # кеширование
 install:
   - npm install  # команда установки зависимостей
-build: off  # отключаем встроенную в appveyor систему сборки
 test_script:
   - npm run lint && npm test  # скрипт тестирования
