--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,5 +1,5 @@
 version: 1.0.{build}
-image: Visual Studio 2019
+image: Ubuntu1804
 environment:
   GITHUB_TOKEN: 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
 build:
